k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: demo
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: my-app
